# cpp_named_concepts

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/: Allocator.hpp  ConstexprIterator.hpp  Container.hpp  CopyAssignable.hpp  CopyConstructible.hpp  CopyInsertable.hpp  DefaultConstructible.hpp  Destructible.hpp  EqualityComparable.hpp  Erasable.hpp  LegacyBidirectionalIterator.hpp  LegacyContiguousIterator.hpp  LegacyForwardIterator.hpp  LegacyInputIterator.hpp  LegacyIterator.hpp  LegacyOutputIterator.hpp  LegacyRandomAccessIterator.hpp  MoveAssignable.hpp  MoveConstructible.hpp  NullablePointer.hpp  Swappable.hpp
include/details/: same_as_either.hpp
tests/: test.cpp
